# libutility

utility/: CMakeLists.txt  algorithm.hpp  align.hpp  archive-loading.hpp  assert.cpp  assert.hpp  asyncqueue.hpp  atexit.cpp  atexit.hpp  atfork-asio.hpp  atfork.cpp  atfork.hpp  atomic.hpp  base64.hpp  binaryio.hpp  buildsys.hpp  config.hpp  cppversion.hpp  cpuinfo.cpp  cpuinfo.hpp  ctrlcommand.hpp  duration.hpp  enum-io.hpp  enum.hpp  env.hpp  environment.hpp  errorcode.hpp  eventcounter.cpp  eventcounter.hpp  expect.hpp  expected.hpp  filedes.cpp  filedes.hpp  filesystem.cpp  filesystem.hpp  format.hpp  future.hpp  gccversion.hpp  getenv.hpp  gl.hpp  (+108 more)
utility/compat/: optional.hpp
utility/detail/: config.cpp  config.hpp  filedes.posix.cpp  filedes.windows.cpp  filesystem.cpp  filesystem.hpp  filesystem.linux.cpp  filesystem.posix.cpp  filesystem.unsupported.cpp  filesystem.windows.cpp  hostname.darwin.cpp  hostname.linux.cpp  hostname.windows.cpp  iface.hpp  iface.linux.cpp  iface.unsupported.cpp  limits.posix.cpp  limits.unsupported.cpp  map.hpp  meminfo.linux.cpp  meminfo.unsupported.cpp  memoryfile.linux.cpp  memoryfile.unsupported.cpp  multivalue.hpp  path.darwin.cpp  path.hpp  path.linux.cpp  path.posix.cpp  path.unsupported.cpp  path.windows.cpp  process.hpp  redirectfile.hpp  rlimit.linux.cpp  rlimit.unsupported.cpp  rlimit.windows.cpp  streams.hpp  time.posix.cpp  time.windows.cpp  unistd_compat.windows.cpp
utility/python/: CMakeLists.txt  importsupport.py  utilitymodule.cpp  utilitymodule.hpp
utility/serialization/: optional.hpp
utility/test/: path.cpp  process.cpp  small_list.cpp  streams.cpp  tcpendpoint.cpp
utility/test-base64/: CMakeLists.txt  base64.cpp
utility/test-copytree/: CMakeLists.txt  main.cpp
utility/test-procstat/: CMakeLists.txt  main.cpp
utility/test-uri/: CMakeLists.txt  testuri.cpp
utility/test-utility/: CMakeLists.txt  main.cpp
utility/tools/: CMakeLists.txt
utility/tools/test-tcpendpoint/: CMakeLists.txt  tcpendpoint.cpp
utility/tools/test-vercmp/: CMakeLists.txt  vercmp.cpp
utility/tools/test-zip/: CMakeLists.txt  lszip.cpp  unzip.cpp  zip.cpp
